-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.6.0
-
3
-
12620
kernel panics seen at device mount time, most typically at first mount of MDS.
example error log:
<0>[ 157.751282] LustreError: 3510:0:(sec_ctx.c:80:pop_ctxt()) LBUG <4>[ 157.752778] Pid: 3510, comm: mount.lustre <4>[ 157.752779] <4>[ 157.752780] Call Trace: ... ...
On careful analysis this flaw was introduced by the earlier commit commit 3e7573cc14a331f01150814495e2345793e22f06, LU-2753 lvfs: cleanup lvfs.h and collateral. Landed in Jan., so it's fairly recent.
That previous commit does a call to pop_ctxt()
with arguments in the wrong order, reversed from what they should be.
Plan to submit a simple 1 line fix that repairs the problem.